# Learn-OpenGL

./: README.md
LearnOpenGL/: .gitignore  CMakeLists.txt
LearnOpenGL/Global_Include/: ConstantShaders.h  ResourceLoader.h  Shader.h
LearnOpenGL/Global_Include/glad/: glad.h
LearnOpenGL/Global_Sources/: Shader.cpp  glad.c
LearnOpenGL/Resources/: TestFrag.frag  TestVertex.vert
LearnOpenGL/TestingProject/: CMakeLists.txt  main.cpp
